src/AnalizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN conjunto_sentencias END ';'
   2           | BEGIN conjunto_sentencias END ';'
   3           | ID conjunto_sentencias END ';'

   4  conjunto_sentencias : declarativa ';'
   5                      | declarativa
   6                      | ejecutable ';'
   7                      | ejecutable
   8                      | conjunto_sentencias declarativa ';'
   9                      | conjunto_sentencias declarativa
  10                      | conjunto_sentencias ejecutable ';'
  11                      | conjunto_sentencias ejecutable

  12  ejecutable : sentencia_if
  13             | invocacion_fun
  14             | asig
  15             | repeat_until
  16             | goto
  17             | salida

  18  bloque_sentencias_ejecutables : BEGIN sentencias_ejecutables END
  19                                | BEGIN sentencias_ejecutables retorno END
  20                                | BEGIN retorno END

  21  sentencias_ejecutables : ejecutable ';'
  22                         | sentencias_ejecutables ejecutable ';'
  23                         | ejecutable
  24                         | sentencias_ejecutables ejecutable

  25  declarativa : declaracionFun
  26              | declarvar
  27              | def_triple
  28              | declar_compuesto

  29  declarvar : tipo lista_var

  30  declar_compuesto : ID lista_var

  31  lista_var : ID
  32            | lista_var ',' ID

  33  tipo : TIPO_OCTAL
  34       | TIPO_UNSIGNED
  35       | TIPO_SINGLE

  36  declaracionFun : tipo FUN ID '(' parametro ')' BEGIN conjunto_sentencias retorno END
  37                 | tipo FUN ID '(' parametro ')' BEGIN retorno END
  38                 | tipo FUN ID '(' parametro ')' BEGIN conjunto_sentencias END
  39                 | tipo FUN '(' parametro ')' BEGIN conjunto_sentencias retorno END
  40                 | tipo FUN '(' parametro ')' BEGIN retorno END
  41                 | tipo FUN ID '(' ')' BEGIN conjunto_sentencias retorno END
  42                 | tipo FUN ID '(' ')' BEGIN retorno END

  43  parametro : tipo ID
  44            | tipo
  45            | ID

  46  retorno : RET '(' exp_arit ')' ';'

  47  asig : ID ASIGNACION exp_arit
  48       | ID '{' constante '}' ASIGNACION exp_arit

  49  exp_arit : exp_arit '+' termino
  50           | exp_arit '-' termino
  51           | exp_arit '+' error ';'
  52           | exp_arit '-' error ';'
  53           | termino

  54  lista_exp_arit : exp_arit
  55                 | lista_exp_arit ',' exp_arit

  56  termino : termino '*' factor
  57          | termino '/' factor
  58          | factor
  59          | termino '*' error ';'
  60          | termino '/' error ';'

  61  factor : ID
  62         | ID '{' constante '}'
  63         | constante
  64         | SINGLE_CONSTANTE
  65         | '-' SINGLE_CONSTANTE
  66         | invocacion_fun

  67  etiqueta : ID '@'

  68  constante : ENTERO_UNSIGNED
  69            | OCTAL

  70  invocacion_fun : ID '(' exp_arit ')'
  71                 | ID '(' tipo '(' exp_arit ')' ')'
  72                 | ID '(' ')'

  73  sentencia_if : IF condicion THEN bloque_sentencias_ejecutables END_IF
  74               | IF condicion THEN bloque_sentencias_ejecutables
  75               | IF condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables END_IF
  76               | IF condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables
  77               | IF condicion THEN END_IF
  78               | IF condicion THEN bloque_sentencias_ejecutables ELSE END_IF

  79  condicion : '(' exp_arit comparador exp_arit ')'
  80            | '(' '(' lista_exp_arit ')' comparador '(' lista_exp_arit ')' ')'
  81            | '(' '(' lista_exp_arit comparador '(' lista_exp_arit ')' ')'
  82            | '(' '(' lista_exp_arit ')' comparador lista_exp_arit ')' ')'
  83            | '(' lista_exp_arit ')' comparador '(' lista_exp_arit ')' ')'
  84            | '(' '(' lista_exp_arit ')' comparador '(' lista_exp_arit ')'
  85            | exp_arit comparador exp_arit ')'
  86            | '(' exp_arit comparador exp_arit
  87            | '(' exp_arit exp_arit ')'
  88            | '(' '(' lista_exp_arit ')' '(' lista_exp_arit ')' ')'
  89            | '(' '(' lista_exp_arit ')' ')'

  90  comparador : MAYORIGUAL
  91             | MENORIGUAL
  92             | DISTINTO
  93             | '='
  94             | '>'
  95             | '<'

  96  salida : OUTF '(' MULTILINEA ')'
  97         | OUTF '(' exp_arit ") "
  98         | OUTF '(' ')'
  99         | OUTF '(' error ')'

 100  repeat_until : REPEAT bloque_sentencias_ejecutables UNTIL condicion
 101               | REPEAT UNTIL condicion
 102               | REPEAT bloque_sentencias_ejecutables condicion

 103  def_triple : TYPEDEF tipo_compuesto '<' tipo '>' ID

 104  tipo_compuesto : TRIPLE

 105  goto : GOTO etiqueta
 106       | GOTO error ';'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	BEGIN  shift 2
	.  error

	programa  goto 3


state 1
	programa : ID . BEGIN conjunto_sentencias END ';'  (1)
	programa : ID . conjunto_sentencias END ';'  (3)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	BEGIN  shift 7
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	conjunto_sentencias  goto 14
	declarativa  goto 15
	ejecutable  goto 16
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 2
	programa : BEGIN . conjunto_sentencias END ';'  (2)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	conjunto_sentencias  goto 28
	declarativa  goto 15
	ejecutable  goto 16
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	declar_compuesto : ID . lista_var  (30)
	asig : ID . ASIGNACION exp_arit  (47)
	asig : ID . '{' constante '}' ASIGNACION exp_arit  (48)
	invocacion_fun : ID . '(' exp_arit ')'  (70)
	invocacion_fun : ID . '(' tipo '(' exp_arit ')' ')'  (71)
	invocacion_fun : ID . '(' ')'  (72)

	ID  shift 29
	ASIGNACION  shift 30
	'('  shift 31
	'{'  shift 32
	.  error

	lista_var  goto 33


state 5
	repeat_until : REPEAT . bloque_sentencias_ejecutables UNTIL condicion  (100)
	repeat_until : REPEAT . UNTIL condicion  (101)
	repeat_until : REPEAT . bloque_sentencias_ejecutables condicion  (102)

	BEGIN  shift 34
	UNTIL  shift 35
	.  error

	bloque_sentencias_ejecutables  goto 36


state 6
	sentencia_if : IF . condicion THEN bloque_sentencias_ejecutables END_IF  (73)
	sentencia_if : IF . condicion THEN bloque_sentencias_ejecutables  (74)
	sentencia_if : IF . condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables END_IF  (75)
	sentencia_if : IF . condicion THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables  (76)
	sentencia_if : IF . condicion THEN END_IF  (77)
	sentencia_if : IF . condicion THEN bloque_sentencias_ejecutables ELSE END_IF  (78)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 44
	constante  goto 45
	termino  goto 46
	factor  goto 47
	condicion  goto 48


state 7
	programa : ID BEGIN . conjunto_sentencias END ';'  (1)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	conjunto_sentencias  goto 49
	declarativa  goto 15
	ejecutable  goto 16
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 8
	salida : OUTF . '(' MULTILINEA ')'  (96)
	salida : OUTF . '(' exp_arit ") "  (97)
	salida : OUTF . '(' ')'  (98)
	salida : OUTF . '(' error ')'  (99)

	'('  shift 50
	.  error


state 9
	def_triple : TYPEDEF . tipo_compuesto '<' tipo '>' ID  (103)

	TRIPLE  shift 51
	.  error

	tipo_compuesto  goto 52


state 10
	goto : GOTO . etiqueta  (105)
	goto : GOTO . error ';'  (106)

	error  shift 53
	ID  shift 54
	.  error

	etiqueta  goto 55


state 11
	tipo : TIPO_UNSIGNED .  (34)

	.  reduce 34


state 12
	tipo : TIPO_SINGLE .  (35)

	.  reduce 35


state 13
	tipo : TIPO_OCTAL .  (33)

	.  reduce 33


state 14
	programa : ID conjunto_sentencias . END ';'  (3)
	conjunto_sentencias : conjunto_sentencias . declarativa ';'  (8)
	conjunto_sentencias : conjunto_sentencias . declarativa  (9)
	conjunto_sentencias : conjunto_sentencias . ejecutable ';'  (10)
	conjunto_sentencias : conjunto_sentencias . ejecutable  (11)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	END  shift 56
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	declarativa  goto 57
	ejecutable  goto 58
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 15
	conjunto_sentencias : declarativa . ';'  (4)
	conjunto_sentencias : declarativa .  (5)

	';'  shift 59
	ID  reduce 5
	REPEAT  reduce 5
	IF  reduce 5
	END  reduce 5
	OUTF  reduce 5
	TYPEDEF  reduce 5
	RET  reduce 5
	GOTO  reduce 5
	TIPO_UNSIGNED  reduce 5
	TIPO_SINGLE  reduce 5
	TIPO_OCTAL  reduce 5


state 16
	conjunto_sentencias : ejecutable . ';'  (6)
	conjunto_sentencias : ejecutable .  (7)

	';'  shift 60
	ID  reduce 7
	REPEAT  reduce 7
	IF  reduce 7
	END  reduce 7
	OUTF  reduce 7
	TYPEDEF  reduce 7
	RET  reduce 7
	GOTO  reduce 7
	TIPO_UNSIGNED  reduce 7
	TIPO_SINGLE  reduce 7
	TIPO_OCTAL  reduce 7


state 17
	ejecutable : sentencia_if .  (12)

	.  reduce 12


state 18
	ejecutable : invocacion_fun .  (13)

	.  reduce 13


state 19
	ejecutable : asig .  (14)

	.  reduce 14


state 20
	ejecutable : repeat_until .  (15)

	.  reduce 15


state 21
	ejecutable : goto .  (16)

	.  reduce 16


state 22
	ejecutable : salida .  (17)

	.  reduce 17


state 23
	declarativa : declaracionFun .  (25)

	.  reduce 25


state 24
	declarativa : declarvar .  (26)

	.  reduce 26


state 25
	declarativa : def_triple .  (27)

	.  reduce 27


state 26
	declarativa : declar_compuesto .  (28)

	.  reduce 28


state 27
	declarvar : tipo . lista_var  (29)
	declaracionFun : tipo . FUN ID '(' parametro ')' BEGIN conjunto_sentencias retorno END  (36)
	declaracionFun : tipo . FUN ID '(' parametro ')' BEGIN retorno END  (37)
	declaracionFun : tipo . FUN ID '(' parametro ')' BEGIN conjunto_sentencias END  (38)
	declaracionFun : tipo . FUN '(' parametro ')' BEGIN conjunto_sentencias retorno END  (39)
	declaracionFun : tipo . FUN '(' parametro ')' BEGIN retorno END  (40)
	declaracionFun : tipo . FUN ID '(' ')' BEGIN conjunto_sentencias retorno END  (41)
	declaracionFun : tipo . FUN ID '(' ')' BEGIN retorno END  (42)

	ID  shift 29
	FUN  shift 61
	.  error

	lista_var  goto 62


state 28
	programa : BEGIN conjunto_sentencias . END ';'  (2)
	conjunto_sentencias : conjunto_sentencias . declarativa ';'  (8)
	conjunto_sentencias : conjunto_sentencias . declarativa  (9)
	conjunto_sentencias : conjunto_sentencias . ejecutable ';'  (10)
	conjunto_sentencias : conjunto_sentencias . ejecutable  (11)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	END  shift 63
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	declarativa  goto 57
	ejecutable  goto 58
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 29
	lista_var : ID .  (31)

	.  reduce 31


state 30
	asig : ID ASIGNACION . exp_arit  (47)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 64
	constante  goto 45
	termino  goto 46
	factor  goto 47


state 31
	invocacion_fun : ID '(' . exp_arit ')'  (70)
	invocacion_fun : ID '(' . tipo '(' exp_arit ')' ')'  (71)
	invocacion_fun : ID '(' . ')'  (72)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	'-'  shift 41
	')'  shift 65
	.  error

	invocacion_fun  goto 43
	tipo  goto 66
	exp_arit  goto 67
	constante  goto 45
	termino  goto 46
	factor  goto 47


state 32
	asig : ID '{' . constante '}' ASIGNACION exp_arit  (48)

	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	.  error

	constante  goto 68


state 33
	declar_compuesto : ID lista_var .  (30)
	lista_var : lista_var . ',' ID  (32)

	','  shift 69
	ID  reduce 30
	REPEAT  reduce 30
	IF  reduce 30
	END  reduce 30
	OUTF  reduce 30
	TYPEDEF  reduce 30
	RET  reduce 30
	GOTO  reduce 30
	TIPO_UNSIGNED  reduce 30
	TIPO_SINGLE  reduce 30
	TIPO_OCTAL  reduce 30
	';'  reduce 30


state 34
	bloque_sentencias_ejecutables : BEGIN . sentencias_ejecutables END  (18)
	bloque_sentencias_ejecutables : BEGIN . sentencias_ejecutables retorno END  (19)
	bloque_sentencias_ejecutables : BEGIN . retorno END  (20)

	ID  shift 70
	REPEAT  shift 5
	IF  shift 6
	OUTF  shift 8
	RET  shift 71
	GOTO  shift 10
	.  error

	ejecutable  goto 72
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	sentencias_ejecutables  goto 73
	retorno  goto 74


state 35
	repeat_until : REPEAT UNTIL . condicion  (101)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 44
	constante  goto 45
	termino  goto 46
	factor  goto 47
	condicion  goto 75


state 36
	repeat_until : REPEAT bloque_sentencias_ejecutables . UNTIL condicion  (100)
	repeat_until : REPEAT bloque_sentencias_ejecutables . condicion  (102)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	UNTIL  shift 76
	'-'  shift 41
	'('  shift 42
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 44
	constante  goto 45
	termino  goto 46
	factor  goto 47
	condicion  goto 77


state 37
	factor : ID .  (61)
	factor : ID . '{' constante '}'  (62)
	invocacion_fun : ID . '(' exp_arit ')'  (70)
	invocacion_fun : ID . '(' tipo '(' exp_arit ')' ')'  (71)
	invocacion_fun : ID . '(' ')'  (72)

	'('  shift 31
	'{'  shift 78
	MENORIGUAL  reduce 61
	ID  reduce 61
	DISTINTO  reduce 61
	MAYORIGUAL  reduce 61
	SINGLE_CONSTANTE  reduce 61
	ENTERO_UNSIGNED  reduce 61
	OCTAL  reduce 61
	REPEAT  reduce 61
	IF  reduce 61
	THEN  reduce 61
	END  reduce 61
	OUTF  reduce 61
	TYPEDEF  reduce 61
	RET  reduce 61
	GOTO  reduce 61
	TIPO_UNSIGNED  reduce 61
	TIPO_SINGLE  reduce 61
	TIPO_OCTAL  reduce 61
	'+'  reduce 61
	'-'  reduce 61
	'/'  reduce 61
	'*'  reduce 61
	';'  reduce 61
	','  reduce 61
	')'  reduce 61
	'='  reduce 61
	'>'  reduce 61
	'<'  reduce 61
	") "  reduce 61


state 38
	factor : SINGLE_CONSTANTE .  (64)

	.  reduce 64


state 39
	constante : ENTERO_UNSIGNED .  (68)

	.  reduce 68


state 40
	constante : OCTAL .  (69)

	.  reduce 69


state 41
	factor : '-' . SINGLE_CONSTANTE  (65)

	SINGLE_CONSTANTE  shift 79
	.  error


state 42
	condicion : '(' . exp_arit comparador exp_arit ')'  (79)
	condicion : '(' . '(' lista_exp_arit ')' comparador '(' lista_exp_arit ')' ')'  (80)
	condicion : '(' . '(' lista_exp_arit comparador '(' lista_exp_arit ')' ')'  (81)
	condicion : '(' . '(' lista_exp_arit ')' comparador lista_exp_arit ')' ')'  (82)
	condicion : '(' . lista_exp_arit ')' comparador '(' lista_exp_arit ')' ')'  (83)
	condicion : '(' . '(' lista_exp_arit ')' comparador '(' lista_exp_arit ')'  (84)
	condicion : '(' . exp_arit comparador exp_arit  (86)
	condicion : '(' . exp_arit exp_arit ')'  (87)
	condicion : '(' . '(' lista_exp_arit ')' '(' lista_exp_arit ')' ')'  (88)
	condicion : '(' . '(' lista_exp_arit ')' ')'  (89)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	'('  shift 80
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 81
	constante  goto 45
	termino  goto 46
	lista_exp_arit  goto 82
	factor  goto 47


state 43
	factor : invocacion_fun .  (66)

	.  reduce 66


state 44
	exp_arit : exp_arit . '+' termino  (49)
	exp_arit : exp_arit . '-' termino  (50)
	exp_arit : exp_arit . '+' error ';'  (51)
	exp_arit : exp_arit . '-' error ';'  (52)
	condicion : exp_arit . comparador exp_arit ')'  (85)

	MENORIGUAL  shift 83
	DISTINTO  shift 84
	MAYORIGUAL  shift 85
	'+'  shift 86
	'-'  shift 87
	'='  shift 88
	'>'  shift 89
	'<'  shift 90
	.  error

	comparador  goto 91


state 45
	factor : constante .  (63)

	.  reduce 63


state 46
	exp_arit : termino .  (53)
	termino : termino . '*' factor  (56)
	termino : termino . '/' factor  (57)
	termino : termino . '*' error ';'  (59)
	termino : termino . '/' error ';'  (60)

	'/'  shift 92
	'*'  shift 93
	MENORIGUAL  reduce 53
	ID  reduce 53
	DISTINTO  reduce 53
	MAYORIGUAL  reduce 53
	SINGLE_CONSTANTE  reduce 53
	ENTERO_UNSIGNED  reduce 53
	OCTAL  reduce 53
	REPEAT  reduce 53
	IF  reduce 53
	THEN  reduce 53
	END  reduce 53
	OUTF  reduce 53
	TYPEDEF  reduce 53
	RET  reduce 53
	GOTO  reduce 53
	TIPO_UNSIGNED  reduce 53
	TIPO_SINGLE  reduce 53
	TIPO_OCTAL  reduce 53
	'+'  reduce 53
	'-'  reduce 53
	';'  reduce 53
	','  reduce 53
	')'  reduce 53
	'='  reduce 53
	'>'  reduce 53
	'<'  reduce 53
	") "  reduce 53


state 47
	termino : factor .  (58)

	.  reduce 58


state 48
	sentencia_if : IF condicion . THEN bloque_sentencias_ejecutables END_IF  (73)
	sentencia_if : IF condicion . THEN bloque_sentencias_ejecutables  (74)
	sentencia_if : IF condicion . THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables END_IF  (75)
	sentencia_if : IF condicion . THEN bloque_sentencias_ejecutables ELSE bloque_sentencias_ejecutables  (76)
	sentencia_if : IF condicion . THEN END_IF  (77)
	sentencia_if : IF condicion . THEN bloque_sentencias_ejecutables ELSE END_IF  (78)

	THEN  shift 94
	.  error


state 49
	programa : ID BEGIN conjunto_sentencias . END ';'  (1)
	conjunto_sentencias : conjunto_sentencias . declarativa ';'  (8)
	conjunto_sentencias : conjunto_sentencias . declarativa  (9)
	conjunto_sentencias : conjunto_sentencias . ejecutable ';'  (10)
	conjunto_sentencias : conjunto_sentencias . ejecutable  (11)

	ID  shift 4
	REPEAT  shift 5
	IF  shift 6
	END  shift 95
	OUTF  shift 8
	TYPEDEF  shift 9
	GOTO  shift 10
	TIPO_UNSIGNED  shift 11
	TIPO_SINGLE  shift 12
	TIPO_OCTAL  shift 13
	.  error

	declarativa  goto 57
	ejecutable  goto 58
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	declaracionFun  goto 23
	declarvar  goto 24
	def_triple  goto 25
	declar_compuesto  goto 26
	tipo  goto 27


state 50
	salida : OUTF '(' . MULTILINEA ')'  (96)
	salida : OUTF '(' . exp_arit ") "  (97)
	salida : OUTF '(' . ')'  (98)
	salida : OUTF '(' . error ')'  (99)

	error  shift 96
	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	MULTILINEA  shift 97
	'-'  shift 41
	')'  shift 98
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 99
	constante  goto 45
	termino  goto 46
	factor  goto 47


state 51
	tipo_compuesto : TRIPLE .  (104)

	.  reduce 104


state 52
	def_triple : TYPEDEF tipo_compuesto . '<' tipo '>' ID  (103)

	'<'  shift 100
	.  error


state 53
	goto : GOTO error . ';'  (106)

	';'  shift 101
	.  error


state 54
	etiqueta : ID . '@'  (67)

	'@'  shift 102
	.  error


state 55
	goto : GOTO etiqueta .  (105)

	.  reduce 105


state 56
	programa : ID conjunto_sentencias END . ';'  (3)

	';'  shift 103
	.  error


state 57
	conjunto_sentencias : conjunto_sentencias declarativa . ';'  (8)
	conjunto_sentencias : conjunto_sentencias declarativa .  (9)

	';'  shift 104
	ID  reduce 9
	REPEAT  reduce 9
	IF  reduce 9
	END  reduce 9
	OUTF  reduce 9
	TYPEDEF  reduce 9
	RET  reduce 9
	GOTO  reduce 9
	TIPO_UNSIGNED  reduce 9
	TIPO_SINGLE  reduce 9
	TIPO_OCTAL  reduce 9


state 58
	conjunto_sentencias : conjunto_sentencias ejecutable . ';'  (10)
	conjunto_sentencias : conjunto_sentencias ejecutable .  (11)

	';'  shift 105
	ID  reduce 11
	REPEAT  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	RET  reduce 11
	GOTO  reduce 11
	TIPO_UNSIGNED  reduce 11
	TIPO_SINGLE  reduce 11
	TIPO_OCTAL  reduce 11


state 59
	conjunto_sentencias : declarativa ';' .  (4)

	.  reduce 4


state 60
	conjunto_sentencias : ejecutable ';' .  (6)

	.  reduce 6


state 61
	declaracionFun : tipo FUN . ID '(' parametro ')' BEGIN conjunto_sentencias retorno END  (36)
	declaracionFun : tipo FUN . ID '(' parametro ')' BEGIN retorno END  (37)
	declaracionFun : tipo FUN . ID '(' parametro ')' BEGIN conjunto_sentencias END  (38)
	declaracionFun : tipo FUN . '(' parametro ')' BEGIN conjunto_sentencias retorno END  (39)
	declaracionFun : tipo FUN . '(' parametro ')' BEGIN retorno END  (40)
	declaracionFun : tipo FUN . ID '(' ')' BEGIN conjunto_sentencias retorno END  (41)
	declaracionFun : tipo FUN . ID '(' ')' BEGIN retorno END  (42)

	ID  shift 106
	'('  shift 107
	.  error


state 62
	declarvar : tipo lista_var .  (29)
	lista_var : lista_var . ',' ID  (32)

	','  shift 69
	ID  reduce 29
	REPEAT  reduce 29
	IF  reduce 29
	END  reduce 29
	OUTF  reduce 29
	TYPEDEF  reduce 29
	RET  reduce 29
	GOTO  reduce 29
	TIPO_UNSIGNED  reduce 29
	TIPO_SINGLE  reduce 29
	TIPO_OCTAL  reduce 29
	';'  reduce 29


state 63
	programa : BEGIN conjunto_sentencias END . ';'  (2)

	';'  shift 108
	.  error


state 64
	asig : ID ASIGNACION exp_arit .  (47)
	exp_arit : exp_arit . '+' termino  (49)
	exp_arit : exp_arit . '-' termino  (50)
	exp_arit : exp_arit . '+' error ';'  (51)
	exp_arit : exp_arit . '-' error ';'  (52)

	'+'  shift 86
	'-'  shift 87
	ID  reduce 47
	REPEAT  reduce 47
	IF  reduce 47
	END  reduce 47
	OUTF  reduce 47
	TYPEDEF  reduce 47
	RET  reduce 47
	GOTO  reduce 47
	TIPO_UNSIGNED  reduce 47
	TIPO_SINGLE  reduce 47
	TIPO_OCTAL  reduce 47
	';'  reduce 47


state 65
	invocacion_fun : ID '(' ')' .  (72)

	.  reduce 72


state 66
	invocacion_fun : ID '(' tipo . '(' exp_arit ')' ')'  (71)

	'('  shift 109
	.  error


state 67
	exp_arit : exp_arit . '+' termino  (49)
	exp_arit : exp_arit . '-' termino  (50)
	exp_arit : exp_arit . '+' error ';'  (51)
	exp_arit : exp_arit . '-' error ';'  (52)
	invocacion_fun : ID '(' exp_arit . ')'  (70)

	'+'  shift 86
	'-'  shift 87
	')'  shift 110
	.  error


state 68
	asig : ID '{' constante . '}' ASIGNACION exp_arit  (48)

	'}'  shift 111
	.  error


state 69
	lista_var : lista_var ',' . ID  (32)

	ID  shift 112
	.  error


state 70
	asig : ID . ASIGNACION exp_arit  (47)
	asig : ID . '{' constante '}' ASIGNACION exp_arit  (48)
	invocacion_fun : ID . '(' exp_arit ')'  (70)
	invocacion_fun : ID . '(' tipo '(' exp_arit ')' ')'  (71)
	invocacion_fun : ID . '(' ')'  (72)

	ASIGNACION  shift 30
	'('  shift 31
	'{'  shift 32
	.  error


state 71
	retorno : RET . '(' exp_arit ')' ';'  (46)

	'('  shift 113
	.  error


state 72
	sentencias_ejecutables : ejecutable . ';'  (21)
	sentencias_ejecutables : ejecutable .  (23)

	';'  shift 114
	ID  reduce 23
	REPEAT  reduce 23
	IF  reduce 23
	END  reduce 23
	OUTF  reduce 23
	RET  reduce 23
	GOTO  reduce 23


state 73
	bloque_sentencias_ejecutables : BEGIN sentencias_ejecutables . END  (18)
	bloque_sentencias_ejecutables : BEGIN sentencias_ejecutables . retorno END  (19)
	sentencias_ejecutables : sentencias_ejecutables . ejecutable ';'  (22)
	sentencias_ejecutables : sentencias_ejecutables . ejecutable  (24)

	ID  shift 70
	REPEAT  shift 5
	IF  shift 6
	END  shift 115
	OUTF  shift 8
	RET  shift 71
	GOTO  shift 10
	.  error

	ejecutable  goto 116
	sentencia_if  goto 17
	invocacion_fun  goto 18
	asig  goto 19
	repeat_until  goto 20
	goto  goto 21
	salida  goto 22
	retorno  goto 117


state 74
	bloque_sentencias_ejecutables : BEGIN retorno . END  (20)

	END  shift 118
	.  error


state 75
	repeat_until : REPEAT UNTIL condicion .  (101)

	.  reduce 101


state 76
	repeat_until : REPEAT bloque_sentencias_ejecutables UNTIL . condicion  (100)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	'('  shift 42
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 44
	constante  goto 45
	termino  goto 46
	factor  goto 47
	condicion  goto 119


state 77
	repeat_until : REPEAT bloque_sentencias_ejecutables condicion .  (102)

	.  reduce 102


state 78
	factor : ID '{' . constante '}'  (62)

	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	.  error

	constante  goto 120


state 79
	factor : '-' SINGLE_CONSTANTE .  (65)

	.  reduce 65


state 80
	condicion : '(' '(' . lista_exp_arit ')' comparador '(' lista_exp_arit ')' ')'  (80)
	condicion : '(' '(' . lista_exp_arit comparador '(' lista_exp_arit ')' ')'  (81)
	condicion : '(' '(' . lista_exp_arit ')' comparador lista_exp_arit ')' ')'  (82)
	condicion : '(' '(' . lista_exp_arit ')' comparador '(' lista_exp_arit ')'  (84)
	condicion : '(' '(' . lista_exp_arit ')' '(' lista_exp_arit ')' ')'  (88)
	condicion : '(' '(' . lista_exp_arit ')' ')'  (89)

	ID  shift 37
	SINGLE_CONSTANTE  shift 38
	ENTERO_UNSIGNED  shift 39
	OCTAL  shift 40
	'-'  shift 41
	.  error

	invocacion_fun  goto 43
	exp_arit  goto 121
	constante  goto 45
	termino  goto 46
	lista_exp_arit  goto 122
	factor  goto 47

